--- a/src/vscp/drivers/level1/usb2can/usb2can/win32/versioninfo.rc
+++ b/src/vscp/drivers/level1/usb2can/usb2can/win32/versioninfo.rc
@@ -1,10 +1,10 @@
 #include <winver.h>
 
-#define VER_FILEVERSION          1,0,8,0
+#define VER_FILEVERSION          1,0,9,0
 #define VER_FILEVERSION_STR      VER_FILEVERSION
-#define VER_PRODUCTVERSION       1,0,8,0
-#define VER_PRODUCTVERSION_STR   "https://github.com/davidlcamlin/vscp_software"
-#define VER_ORIGINALFILENAME_STR "Usb2can.dll"
+#define VER_PRODUCTVERSION       1, 0, 9, 0
+#define VER_PRODUCTVERSION_STR   "CANAL Specification 1.0.14"
+#define VER_ORIGINALFILENAME_STR "vscpl1_usb2candrv.dll"
 
 
 VS_VERSION_INFO VERSIONINFO
@@ -19,10 +19,10 @@ BEGIN
      BEGIN
          BLOCK "040904E4"
          BEGIN
-             VALUE "CompanyName",            ""
-             VALUE "FileDescription",        "CAN Communication interface implementation for Windows"
-             VALUE "LegalCopyright",         ""
-             VALUE "ProductName",            "Usb2can"
+             VALUE "CompanyName",            "8devices.com"
+             VALUE "FileDescription",        "CANAL interface driver for USB2CAN interface"
+             VALUE "LegalCopyright",         "www.vscp.org"
+             VALUE "ProductName",            "USB2CAN CANAL Interface"
              VALUE "ProductVersion",         VER_PRODUCTVERSION_STR
              VALUE "FileVersion",            VER_FILEVERSION_STR
 			 VALUE "OriginalFilename",       VER_ORIGINALFILENAME_STR
